--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "jquery": "^3.7.0",
+    "jquery-lazy": "^1.7.11",
     "popper.js": "^1.16.1"
   }
 }
